feat: add endpoint to add item reviews
